fixed spacing in nav, updated gallery content date

--- a/sass/sections/nav.scss
+++ b/sass/sections/nav.scss
@@ -6,16 +6,15 @@
 	width: 100%;
 	background: white;
 	overflow: hidden;
-	box-shadow: 0px -2px 5px 0px rgba(0,0,0,0.1);
+	box-shadow: 0px -2px 5px 0px rgba(0, 0, 0, 0.1);
 	transition: transform 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
 
-
 	h2 {
-        @extend %font-section-title;
-    }
-    
-    ul {
-        display: grid;
+		@extend %font-section-title;
+	}
+
+	ul {
+		display: grid;
 		grid-auto-columns: 1fr;
 		grid-auto-flow: column;
 		list-style: none;
@@ -24,13 +23,15 @@
 
 		a {
 			display: grid;
-			padding: 0.3rem;
+			padding: 0.4rem 0 0.2rem 0;
 			justify-items: center;
 			align-items: center;
 			@extend %font-label;
 			color: inherit;
 
-			&:hover, &:active, &:focus {
+			&:hover,
+			&:active,
+			&:focus {
 				color: $font-color-inverted;
 				background: black;
 
@@ -40,5 +41,5 @@
 				}
 			}
 		}
-    }
+	}
 }
